--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,3 +1,4 @@
 {
-  "welcome": "Bem vindo a Vite + Vue 3 + Storybook + Typescript"
+  "welcome": "Bem vindo a Vite + Vue 3 + Typescript",
+  "chooseLanguage": "Escolha uma linguagem"
 }
