--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,4 +1,4 @@
 {
   "welcome": "Bem vindo a Vite + Vue 3 + Typescript",
-  "chooseLanguage": "Escolha uma linguagem!"
+  "chooseLanguage": "Escolha uma linguagem: "
 }
