--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -1,4 +1,4 @@
 {
     "welcome": "Üdvözlöm a  Vite + Vue 3 + Typescript sablonban",
-    "chooseLanguage": "Válasszon nyelvet!"
+    "chooseLanguage": "Válasszon nyelvet: "
 }
