--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,10 @@
 {
   "aboutMsg": "This is an about page!",
   "colorsOfTheme": "Colors of theme",
-  "backToHome": "Back to home"
+  "backToHome": "Back to home",
+  "examples": "Examples",
+  "about": "About",
+  "account": "Account",
+  "template": "Template",
+  "noUser": "is not logged in"
 }
