--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,10 +1,13 @@
 {
   "aboutMsg": "This is an about page!",
   "colorsOfTheme": "Colors of theme",
-  "backToHome": "Back to home",
+  "backToHome": "Back to start page",
   "examples": "Examples",
   "about": "About",
   "account": "Account",
   "template": "Template",
-  "noUser": "is not logged in"
+  "noUser": "is not logged in",
+  "startPage": "Start page",
+  "gridDemo": "Grid demo",
+  "links": "Links"
 }
