--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -6,5 +6,8 @@
   "about": "Névjegy",
   "account": "Fiók",
   "template": "Sablon",
-  "noUser": "nincs bejelentkezve"
+  "noUser": "nincs bejelentkezve",
+  "startPage": "Kezdőlap",
+  "gridDemo": "Rács demó",
+  "links": "Hivatkozások"
 }
